--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">YASH</string>
+    <string name="server">https://projectmctibers.appspot.com/</string>
 </resources>
